SERVER-43265 Fix using URI network compressors parameter in shell